# ros-config-reduction

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/reach-cli/: Cargo.toml
crates/reach-cli/python/: launcher.py
crates/reach-cli/src/: main.rs
crates/reachpy-config/: Cargo.toml
crates/reachpy-config/src/: lib.rs
